# anu-architecture

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: COMPARISONS.md  DESIGN_DECISIONS.md  GETTING_STARTED.md  PROJECT_REGISTRY.md  PUBLIC_REPRODUCIBILITY.md  SPEC.md  THE_8_PHASES.md
examples/R-dissertation/: README.md  project_registry.json
examples/python-minimal/: README.md  project_registry.json  run.py
examples/python-minimal/code/analysis/: A01_growth.py
examples/python-minimal/code/loading/: L01_load_indpro.py
examples/python-minimal/code/outputs/: O01_table.py
examples/python-minimal/code/processing/: P01_annual_avg.py
examples/python-minimal/code/validation/: V01_validate.py
schemas/: project_registry.schema.json
src/anu_architecture/: __init__.py  audit.py  checklist.py  cli.py  discovery.py  init.py  registry.py  run.py  status.py  version_cmd.py
src/anu_architecture/templates/R/: .gitignore.template  project_registry.json.template  run.R.template
src/anu_architecture/templates/python/: CHECKLIST.md.template  README.md.template  run.py.template
src/anu_architecture/templates/python/code/analysis/: A00_run_all.py.template
src/anu_architecture/templates/python/code/exploration/: E00_run_all.py.template
src/anu_architecture/templates/python/code/loading/: L00_run_all.py.template
src/anu_architecture/templates/python/code/manual/: M00_run_all.py.template
src/anu_architecture/templates/python/code/outputs/: O00_run_all.py.template
src/anu_architecture/templates/python/code/processing/: P00_run_all.py.template
src/anu_architecture/templates/python/config/: api_keys.env.example.template
src/anu_architecture/templates/python/utils/: paths.py.template
src/anu_architecture/templates/stata/: DECISION_LOG.md.template  run.do.template
tests/: conftest.py  test_audit.py  test_discovery.py  test_init.py  test_registry.py
(+2 files in other folders)
