[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anu-architecture"
version = "2.1.0"
description = "Standardized 8-phase architecture for econometric data construction and analysis."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Anu Architecture contributors"},
]
keywords = ["econometrics", "reproducibility", "data-construction", "research", "pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "typer>=0.12",
    "jsonschema>=4.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.0",
]

[project.scripts]
anu-architecture = "anu_architecture.cli:app"

[project.urls]
Homepage = "https://github.com/andenick/anu-architecture"
Documentation = "https://github.com/andenick/anu-architecture/blob/main/docs/SPEC.md"
Framework = "https://github.com/andenick/anu-framework"
Issues = "https://github.com/andenick/anu-architecture/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/anu_architecture"]

[tool.hatch.build.targets.wheel.force-include]
"src/anu_architecture/templates" = "anu_architecture/templates"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
# B008: "Do not perform function call in argument defaults" — conflicts with
# Typer's idiom (typer.Option / typer.Argument MUST appear as defaults).
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
